Fix for tables with very long strings in them overflowing container

--- a/app/assets/stylesheets/ecosystems.scss
+++ b/app/assets/stylesheets/ecosystems.scss
@@ -806,6 +806,7 @@ body {
 }
 
 .table-wrapper {
+  overflow-x: auto;
   /* Add a shadow to indicate there's more to see if you scroll */
   background: 
     linear-gradient(90deg, $color-white 20%, rgba(255, 255, 255, 0)),
